# multidevice_dataToolkit

./: .env  .gitattributes  .gitignore  README.md  _quarto.yml  environment.yml  pyproject.toml
config/: devices.yml  participants.yml  schedule.yml
deploy/: docker-compose.yml
deploy/postgres/init/: 002_create_app_schema.sql
docs/: manual.ipynb  stats.py  utils.py
docs/atmotube/: datasheet.md  report.ipynb
notebooks/: analysis.ipynb  atmotube.ipynb  data.ipynb  howto.ipynb
src/: main.py  range_check.py  stats.py  utils.py
src/etl/: extract.py  load.py  transform.py
src/etl/parsers/: atmotube.py  ponyopi.py
src/extract/: __init__.py  extract.py
src/extract/clients/: atmotube_client.py  fitbit_client.py
src/extract/config/: atmotube_tokens.py  devices.yml  fitbit_tokens.py  tokens.py
src/extract/scripts/:  backfill_atmotube.py  backfill_atmotube.py  find_earliest.py  find_start_date.py  inspect_data.py  inspect_data_fitbit.py  onboard_new_fitbit.py  verify_atmotube.py  verify_fitbit.py
src/general/: device_registry.py  study_registry.py
src/load/: DEPRECATED_load.py  __init__.py  load.py  schema.sql
src/load/schema/: 00_schemas.sql  01_raw.sql  01_study.sql  02_raw.sql  02_study.sql  03_atmotube.sql  04_fitbit.sql
src/load/scripts/: seed_study.py  test_atmotube.py  test_db.sh  test_fitbit.py
src/multidevice_datatoolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/transform/: DEPRECATEDutils.py  __init__.py  transform.py  utils.py
src/transform/parse/: atmotube_parser.py  fitbit_parser.py
src/transform/parsers/: atmotube.py  fitbit_parser.py  ponyopi.py
src/transform/register/: atmotube_registry.py  fitbit_registry.py
src/transform/registries/: atmotube_registry.py
src/transform/scripts/: test_atmotube.py  test_fitbit.py
